Time: 9 ms (51.84%) | Memory: 46.6 MB (41.61%) - LeetSync