@@ -1,24 +1,16 @@
 class Solution {
     public int[][] merge(int[][] intervals) {
-        if(intervals == null || intervals.length == 0)
-            return intervals;
+        Arrays.sort(intervals, Comparator.comparingInt(a -> a[0]));
+        List<int[]> ans = new ArrayList<>();
         
-        // sort intervals by starting value
-        Arrays.sort(intervals, (a, b) -> Integer.compare(a[0], b[0]));
-
-        LinkedList<int[]> mergedIntervals = new LinkedList<>();
-
-        for(int curr[]:intervals){
-            if(mergedIntervals.isEmpty() || mergedIntervals.getLast()[1]< curr[0]){
-                mergedIntervals.add(curr);
-            }
-            else {
-                mergedIntervals.getLast()[1] = Math.max(curr[1],mergedIntervals.getLast()[1]);
+        for (int[] interval : intervals) {
+            if (ans.isEmpty() || interval[0] > ans.get(ans.size() - 1)[1]) {
+                ans.add(interval);
+            } else {
+                ans.get(ans.size() - 1)[1] = Math.max(interval[1], ans.get(ans.size() - 1)[1]);
             }
         }
-        return mergedIntervals.toArray(new int[0][]);
         
-		
-        
+        return ans.toArray(new int[ans.size()][]);
     }
 }
